--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -477,3 +477,8 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+#octoprint-logo {
+    width: 100%;
+    margin-bottom: 20px;
+}
